test/lambda/negative/import_parse_error_bad.ls
pub fn exported() {
    let broken =
}
